# jquantstats

./: .env  .gitignore  .pre-commit-config.yaml  .rhiza.env  .rhiza.history  CHANGELOG.md  CITATIONS.bib  CONTRIBUTING.md  LICENSE  Makefile  README.md  REPOSITORY_ANALYSIS.md  ROADMAP.md  SECURITY.md  app.py  benchmark.md  brief_plan.md  cliff.toml  demo_report.html  migration.md  mkdocs.yml  opinion.md  plan.md  pyproject.toml  pytest.ini  railway.toml  report.html  report.md  ruff.toml  update.sh  versions.json
.github/: CITATIONS.bib  CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  release.yml  renovate.json  template.yml
.github/DISCUSSION_TEMPLATE/: help-wanted.yml  ideas.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/agents/: analyser.md
.github/badges/: rhiza-sync.json
.github/rhiza/: template.yml
.github/tmp/: pyodide.yml
.github/workflows/: _devcontainer.yml  autopilot.yml  autopilot_v2.yml  book.yml  ci.yml  deep.yml  deptry.yml  link-check.yml  marimo.yml  micropip.yml  paper.yml  pre-commit.yml  pyod.yml  pyod2.yml  pyodide.yml  release.yml  rhiza.yml  rhiza_benchmark.yml  rhiza_book.yml  rhiza_ci.yml  rhiza_codeql.yml  rhiza_docs.yml  rhiza_marimo.yml  rhiza_quality.yml  rhiza_release.yml  rhiza_sync.yml  rhiza_validate.yml  sync.yml  wasm.yml  wasm2.yml  wasm3.yml
.rhiza/: .cfg.toml  .env  history  mkdocs.yml  rhiza.mk  template.yml
.rhiza/make.d/: README.md  agentic.mk  book.mk  docs.mk  quality.mk  sync-status.mk  test.mk
.rhiza/requirements/: README.md  docs.txt  tests.txt
.rhiza/tests/api/: conftest.py  test_makefile_targets.py  test_weekly_workflow.py
.rhiza/tests/integration/: test_book_targets.py
actions/pyodide/: action.yml
benchmarks/: run.py
book/: _config.yml  _toc.yml  genindex.html  objects.inv  search.html  searchindex.js
book/_sources/docs/: index.md
book/docs/: api.html  index.html  reports.html
book/marimo/: demo.py  download.py
book/marimo/notebooks/: analytics_demo.py  generate_svgs.py  monte_carlo.py  plots_and_reports.py  portfolio_construction.py  risk_metrics.py  yfinance_demo.py
docs/: ARCHITECTURE.md  BENCHMARKS.md  BOOK.md  CUSTOMIZATION.md  GLOSSARY.md  MARIMO.md  MIGRATION.md  STABILITY.md  api.md  benchmark.md  cost_models.md  getting_started.md  index.md  lazy_evaluation.md  migration.md  mkdocs-base.yml  mkdocs.yml  notebooks.md  stability.md
docs/marimo/: analytics_demo.py  plots_and_reports.py  yfinance_demo.py
docs/notebooks/: plots_and_reports.py  rhiza.py
docs/reference/: api.md  data.md  plots.md  portfolio.md  reports.md  stats.md
docs/rhiza/: SECURITY.md
notebooks/: index.html
paper/: jquantstats.bib  jquantstats.tex
pdoc/: index.html  jquantstats.html  search.js
pdoc/jquantstats/: _data.html  _plots.html  _reports.html  _stats.html  api.html
recipe/: meta.yaml
src/jquantstats/: __init__.py  _cost_model.py  _data.py  _plots.py  _portfolio_attribution.py  _portfolio_cost.py  _portfolio_data.py  _portfolio_nav.py  _portfolio_plots.py  _portfolio_turnover.py  _protocol.py  _report.py  _reports.py  _stats.py  _stats_basic.py  _stats_core.py  _stats_performance.py  _stats_reporting.py  _stats_rolling.py  _types.py  api.py  data.py  exceptions.py  portfolio.py  py.typed  result.py
src/jquantstats/_data/: __init__.py  data.py
src/jquantstats/_plots/: __init__.py  _data.py  _portfolio.py  _protocol.py
src/jquantstats/_reports/: __init__.py  _data.py  _formatting.py  _portfolio.py  _protocol.py
src/jquantstats/_stats/: __init__.py  _basic.py  _core.py  _expr.py  _internals.py  _montecarlo.py  _performance.py  (+5 more)
src/quantstats/: api.py
src/tests/: __init__.py  conftest.py  test_build_data.py  test_build_data_pandas.py  test_data.py  test_edge_cases.py  test_plots.py  test_quantstats.py  test_readme_example.py  test_reports.py  test_stats.py  test_version.py
test/: pyodide-install-test.mjs
tests/: __init__.py  conftest.py  test_build_data.py  test_build_data_pandas.py  test_quantstats.py  test_readme_example.py  test_stats.py  test_version.py
tests/benchmarks/: __init__.py  test_lazy_vs_eager.py  test_performance.py  test_rolling_sortino.py  test_vs_quantstats.py
tests/coverage/: coverage.info  coverage.json  coverage.xml
tests/html-coverage/: class_index.html  function_index.html  index.html  status.json  z_f30850e03af1646d___init___py.html  z_f30850e03af1646d__data_py.html  z_f30850e03af1646d__plots_py.html  z_f30850e03af1646d__reports_py.html  z_f30850e03af1646d__stats_py.html  z_f30850e03af1646d_api_py.html
tests/html-report/: report.html
tests/test_jquantstats/: conftest.py  plot_test_utils.py  test__cost_model.py  test_api_contract.py  test_build_data.py  test_build_data_pandas.py  test_data.py  test_data_from_prices.py  test_data_from_returns.py  test_edge_cases.py  test_expr.py  test_lazy_data.py  test_local.py  test_plot_snapshots.py  test_plots.py  test_portfolio.py  test_properties.py  test_protocols.py  test_quantstats.py  test_readme_badge.py  test_report.py  test_reports.py  test_result.py  test_stats.py  test_version.py
tests/test_rhiza/: helpers.py  test_rhiza_workflows.py  test_version_matrix.py
v0.8.4/: 404.html  index.html  objects.inv  sitemap.xml
v0.8.4/MIGRATION/: index.html
v0.8.4/STABILITY/: index.html
v0.8.4/api/: index.html
v0.8.4/cost_models/: index.html
v0.8.4/getting_started/: index.html
v0.8.4/notebooks/: index.html
v0.8.4/paper/: jquantstats.tex
v0.8.4/reports/: index.html
v0.9.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.9.0/MIGRATION/: index.html
v0.9.0/STABILITY/: index.html
v0.9.0/api/: index.html
v0.9.0/benchmark/: index.html
v0.9.0/cost_models/: index.html
v0.9.0/getting_started/: index.html
v0.9.0/notebooks/: index.html
v0.9.0/reports/: index.html
v0.9.1/: 404.html  index.html  sitemap.xml
v0.9.1/MIGRATION/: index.html
v0.9.1/STABILITY/: index.html
v0.9.1/api/: index.html
v0.9.1/benchmark/: index.html
v0.9.1/cost_models/: index.html
v0.9.1/getting_started/: index.html
v0.9.1/notebooks/: index.html
v0.9.1/reports/: index.html
(+69 files in other folders)
