# Main project metadata
[project]
name = 'jquantstats'
version = "0.0.36"
description = "Analytics for quants"
authors = [{name='tschm', email= 'thomas.schmelzer@gmail.com'}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.0",
    "numpy>=2.0.0",
    "plotly>=6.0.0",
    "polars>=1.18.0",
    "scipy>=1.14.1"
]
license = "MIT"
license-files = ["LICENSE"]

# Project URLs for documentation and reference
[project.urls]
repository = "https://github.com/tschm/jquantstats"

# Optional dependencies that can be installed with extras (e.g., pip install jquantstats[plot])
[project.optional-dependencies]
plot = ["kaleido==1.2.0"]

[dependency-groups]
dev = [
    "pandas>=2.2.3",
    "pyarrow>=22.0.0",
    "yfinance==1.2.0",
    "ipython==9.10.0",
    "quantstats==0.0.81",
    "marimo>=0.13.15",
]


# Build system configuration
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Configuration for wheel build
[tool.hatch.build.targets.wheel]
packages = ["src/jquantstats"]

# Configuration for what files to include in the build
[tool.hatch.build]
include = [
    "LICENSE",    # Ensure the LICENSE file is included in your package
    "README.md",
    "src/jquantstats"
]

# Bandit security linter configuration
[tool.bandit]
exclude_dirs = ["src/tests"]  # Exclude test directories from security scanning

# Ignore specific dependency issues
[tool.deptry.per_rule_ignores]
DEP002 = ["kaleido"]  # DEP002: Unused direct dependencies

# Package to module name mapping
[tool.deptry.package_module_name_map]
jinja2 = "jinja2"
numpy = "numpy"
plotly = "plotly"
polars = "polars"
pandas = "pandas"
scipy = "scipy"
kaleido = "kaleido"
yfinance = "yfinance"
ipython = "ipython"
quantstats = "quantstats"
marimo = "marimo"

# Mypy configuration
[tool.mypy]
ignore_missing_imports = true
