# Main project metadata
[project]
name = 'jquantstats'
version = "0.7.0"
description = "Analytics for quants"
authors = [{name='tschm', email= 'thomas.schmelzer@gmail.com'}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.0",
    "narwhals>=2.0.0",
    "numpy>=2.0.0",
    "plotly>=6.0.0",
    "polars>=1.18.0",
    "scipy>=1.14.1"
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Science/Research",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

# Project URLs for documentation and reference
[project.urls]
repository = "https://github.com/jebel-quant/jquantstats"

# Optional dependencies that can be installed with extras (e.g., pip install jquantstats[plot])
[project.optional-dependencies]
plot = ["kaleido==1.2.0"]
web = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.12",
]

[dependency-groups]
dev = [
    "pandas>=2.2.3",       # required by quantstats (comparison tests only — not a runtime dependency)
    "pyarrow>=22.0.0",
    "yfinance==1.3.0",
    "ipython==9.10.1",
    "quantstats==0.0.81",  # reference implementation used in test_quantstats.py for metric validation
    "marimo>=0.13.15",
    "httpx>=0.28.1",
]


# Build system configuration
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Configuration for wheel build
[tool.hatch.build.targets.wheel]
packages = ["src/jquantstats"]

# Configuration for what files to include in the build
[tool.hatch.build]
include = [
    "LICENSE",    # Ensure the LICENSE file is included in your package
    "README.md",
    "src/jquantstats",
    "src/jquantstats/py.typed",
]

# Bandit security linter configuration
[tool.bandit]
exclude_dirs = ["src/tests"]  # Exclude test directories from security scanning

# Ignore specific dependency issues
[tool.deptry.per_rule_ignores]
DEP002 = ["kaleido", "fastapi", "uvicorn", "python-multipart"]  # DEP002: Unused direct dependencies

# Package to module name mapping
[tool.deptry.package_module_name_map]
jinja2 = "jinja2"
numpy = "numpy"
plotly = "plotly"
polars = "polars"
pandas = "pandas"
scipy = "scipy"
kaleido = "kaleido"
fastapi = "fastapi"
uvicorn = "uvicorn"
yfinance = "yfinance"
ipython = "ipython"
quantstats = "quantstats"
marimo = "marimo"
hypothesis = "hypothesis"
narwhals = "narwhals"
python-multipart = "python_multipart"
pyarrow = "pyarrow"
httpx = "httpx"

# Coverage configuration
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",  # type-only imports are never executed at runtime
]


# Interrogate docstring coverage configuration
[tool.interrogate]
fail-under = 100
ignore-init-method = true
ignore-magic = true

